# lectures

./: .clang-format  .clang-tidy  .gitignore
01-220905/: TODO.md
01-220905/01-org/: 01-rules.md
01-220905/02-standards/: 01-zoo.md
01-220905/03-basic/: 01-hello-world.cpp  02-no-main-return.cpp  03-a-plus-b.cpp  05-uninitialized-vars.cpp  07-using-namespace.cpp  20-increment.cpp  33-while.cpp
01-adaai1-220905/: progress.md
01-adaai1-220905/01-org/: 01-rules.md  02-materials.md
01-adaai1-220905/03-basic/: 01-hello-world.cpp  02-no-main-return.cpp  03-a-plus-b.cpp  04-compilation-error.cpp  links.md  (+7 more)
02-220912/: 00-old.md  TODO.md  progress.md
03-220919/: TODO.md  progress.md
04-220926/: TODO.md  progress.md
05-221003/: progress.md
06-221010/: todo.md
08-221107/: TODO.md  progress.md
09-221114/: progress.md
10-221121/: TODO.md  progress.md
10-221121/05-cmake-external-library/: CMakeLists.txt  main.cpp
10-221121/05-cmake-external-library/src/: foo.cpp
10-221121/06-shared-library/: CMakeLists.txt  abstract_plugin.h  abstract_plugin.hpp  main.cpp  plan.md  plugin_multiply.cpp  plugin_sum.cpp
11-221128/: todo.md
12-221205/: todo.md
13-221212/: 04-typedef-using.cpp  next.md  progress.md
13y-221225/: 05.md
15-230130/: TODO.md
16-230206/: TODO.md
26-230427/: 06-extra.md
28-230518/: TODO.md
29-230525/: TODO.md
31-230608/: 05-blog.txt
common/: README.md  TODO.md  macos.md  materials.md  software.md  ubuntu.md  windows.md
next/: 11-char.cpp  TODO.md  xx-functions-global-vars.cpp
questions-a/: README.md
questions-b/: README.md
(+912 files in other folders)
